{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 30,
  "lineage": "81ab6fb7-aea2-700e-e837-a65fe75a77f1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "notifications",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:867994182412:security-group/sg-0556f8d627240a27b",
            "description": "Allow Kratos to call notifications",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0556f8d627240a27b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04e9a453b1f8b98e7"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from Kratos (Explicit Rule)",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-052248e1dedd1d592"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "pry-sandbox-notifications-sg",
            "name_prefix": "",
            "owner_id": "867994182412",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c35b68ecca51793c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "867994182412",
            "id": "sg-0556f8d627240a27b",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_kratos_to_notifications",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow traffic from Kratos (Explicit Rule)",
            "from_port": 8080,
            "id": "sgrule-4085529682",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0556f8d627240a27b",
            "security_group_rule_id": "sgr-04ec789e7681558ae",
            "self": false,
            "source_security_group_id": "sg-052248e1dedd1d592",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.notifications",
            "data.terraform_remote_state.kratos",
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    }
  ]
}